# matematicas_computacion_inaoe_2023

./: README.md  pyproject.toml
src/: cripto_determinante.py  dct.py  dct_compress.py  dct_compress2.py  matrix.txt  metrics.csv  proyecto-gui.py  proyecto-gui3.py  proyecto.py  proyectov2.py  proyectov3.py  proyectov4.py  proyectov5.py  sparse_representation.py
src/proyecto1/: TSVD-gui.py  TSVD.py  metrics-10.csv  metrics-100.csv  metrics-1000.csv  metrics-250.csv  metrics-50.csv  metrics-plot.py
