[tool.poetry]
name = "Mate_compu_inaoe"
version = "0.1.0"
description = "Ejercicios Practicos de matemáticas para computacion inaoe"
authors = ["Crag <ogeidca49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.11"
python = "<3.13,>=3.9"
matplotlib = "^3.7.2"
numba = "^0.57.1"
pillow = "^10.0.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
scikit-image = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
