[tool.poetry]
name = "Mate_compu_inaoe"
version = "0.1.0"
description = "Ejercicios Practicos de matemáticas para computacion inaoe"
authors = ["Crag <ogeidca49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.11"
python = ">=3.11,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
scikit-image = "^0.21.0"
opencv-python = "^4.8.1.78"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
